# glacierPy

./: .gitignore  LICENSE  Makefile  README.md  glacierPy.py  glacierPyInquirer.py  glacierPyInquirer_lib.py  glacierPy_lib.py  pyproject.toml  requirements.txt
src/glacierPy/: __main__.py  lib.py
tests/: test_glacierPy_lib.py
