[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glacierPy"
version = "0.1.0"
description = "A Python client for AWS Glacier"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "boto3>=1.41.0",
    "InquirerPy>=0.3.4",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "humanize>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-tqdm",
    "types-tabulate",
    "boto3-stubs[glacier]",
]

[project.scripts]
glacierPy = "glacierPy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
